compiler/tools/fpp-check/test/undef_constant_3.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/undef_constant_3.fpp: 2.16
constant b = M.a
               ^
error: undefined symbol a
